Add test that all known ris metadata is covered in metadata.xsd
- and add missing bedingtesInkrafttreten

RISDEV-6822